# s3-client

./: CMakeLists.txt  README.md
cmake/: FindJansson.cmake  FindTarantool.cmake
doc/: arch.md
examples/: libev_integration.c  tarantool_integration.lua  test.lua  test_create_bucket.lua  test_delete_objects.lua  test_list_objects.lua  test_multi.lua  test_put_get.lua  test_simple.lua
examples/minio/: Dockerfile.ubuntu-tarantool  docker-compose.yaml
include/: s3-tarantool.h  s3_client.h  s3_config.h  s3_error.h  s3_types.h
include/s3/: alloc.h  client.h  config.h  curl_compat.h  curl_easy_factory.h  parser.h  reactor.h  types.h
include/s3-adapters/: reactor_tarantool.h
src/: alloc.c  client.c  error.c  error.h  s3_client.c  s3_curl_easy.c  s3_curl_easy_factory.h  s3_env.c  s3_error.c  s3_http_backend.h  s3_internal.h  s3c.c  s3c.h  tarantool_s3.c  tnt_s3_adapter.c  tnt_s3_adapter.h  tnt_s3_module.c
src/adapters/: reactor_tarantool.c
src/core/: client.c  client_internal.h  config.c  error.c  request.c  signer_v4.c
src/curl/: curl_easy_s3.c  curl_easy_s3.h  curl_multi_driver.c
src/highlevel/: get_buffer.c  get_fd.c  put_buffer.c  put_fd.c
src/http/: curl_easy_factory.c  curl_init.c  http_easy.c  http_multi.c  http_util.c  http_util.h  parser.c
src/lua/: s3c.c  s3c.h
src/tarantool/: hello.c  module.c  sync_get_fd.c  sync_put_fd.c
